service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginxhello
  name: nginxhello
  annotations:
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginxhello
