ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: nginxhello
  name: single-default-backend-ingress
  annotations:
    fluxcd.io/ignore: "true"
spec:
  backend:
    serviceName: nginxhello
    servicePort: 80
